Revision history for Database-Abstraction

0.28
	Added the import method
	Fix determination of BerkeleyDB
	Added BerkeleyDB test
	Increase SQLite timeout

0.27	Sat Jun 14 20:56:27 EDT 2025
	Use Object::Configure rather than Class::Debug

0.26	Tue Apr 15 16:42:48 EDT 2025
	Added the 'no_fixate' option
	POC - fixate slurped data

0.25	Sun Apr 13 08:00:22 EDT 2025
	Fix auto_load calling unknown routine isFalse
	Removed _info and _notice as they're not used
	More extensive use of Params::Get to clean the code
	Added sanity test
	Allow subclasses to set max_slurp_size on open()
	Improved slurping of XML files - still needs more work
	Use Data::Reuse, but note RT#100461

0.24	Wed Mar 26 11:46:57 EDT 2025
	Added basic support for BerkeleyDBs (files ending in .db)
	If config_file has a section for this class, use that

0.23	Tue Mar 25 08:06:33 EDT 2025
	Not all loggers (e.g. Log::Any) can cope with a reference to an ARRAY

0.22	Fri Mar 14 08:02:39 EDT 2025
	Allow the AUTOLOAD feature to be disabled
	Added the auto_load parameter to disable AUTOLOAD
	Force _open/_log to be a private/protected method
	Use Params::Get and Log::Abstraction
	Added config_file argument to new()

0.21	Tue Feb 11 07:45:15 EST 2025
	Fix "Not an ARRAY reference"

0.20	Thu Feb  6 20:29:09 EST 2025
	Fix the manifest

0.19	Thu Feb  6 20:19:07 EST 2025
	Fix selectall_hashref() in slurp mode when no_entry is set

0.18	Thu Feb  6 07:26:02 EST 2025
	Cache hits in list context returns a ref to the array, rather than the array itself

0.17	Tue Feb  4 15:32:43 EST 2025
	Support expires_in for compatability with CHI
	Added cache support to AUTOLOAD
	Allow the logger to be a filename
	When the logger is a reference to code, give more information
	Added the 'filename' property
	Don't attempt to slurp files when col_names is set

0.16	Sun Jan 12 12:15:01 EST 2025
	fetchrow_hashref() - when no_entry is not set allow just one argument to be given: the entry value

0.15	Thu Jan  9 19:43:43 EST 2025