@@ -802,6 +802,125 @@ sub selectall_hash
 	croak("$query: @query_args");
 }
 
+=head2	count
+
+Return the number items/rows matching the given criteria
+
+=cut
+
+sub count
+{
+	my $self = shift;
+	my $params = Params::Get::get_params(undef, @_);
+
+	if($self->{'berkeley'}) {
+		Carp::croak(ref($self), ': count is meaningless on a NoSQL database');
+	}
+
+	my $table = $self->{table} || ref($self);
+	$table =~ s/.*:://;
+
+	$self->_open() if((!$self->{$table}) && (!$self->{'data'}));
+
+	if($self->{'data'}) {
+		if(scalar(keys %{$params}) == 0) {
+			$self->_trace("$table: count fast track return");
+			if(ref($self->{'data'}) eq 'HASH') {
+				return scalar keys %{$self->{'data'}};
+			}
+			return scalar @{$self->{'data'}};
+		} elsif((scalar(keys %{$params}) == 1) && defined($params->{'entry'}) && !$self->{'no_entry'}) {
+			return $self->{'data'}->{$params->{'entry'}} ? 1 : 0;
+		}
+	}
+
+	my $query;
+	my $done_where = 0;
+
+	if(($self->{'type'} eq 'CSV') && !$self->{no_entry}) {
+		$query = "SELECT COUNT(*) FROM $table WHERE entry IS NOT NULL AND entry NOT LIKE '#%'";
+		$done_where = 1;
+	} elsif($self->{no_entry}) {
+		$query = "SELECT COUNT(*) FROM $table";
+	} else {
+		$query = "SELECT COUNT(entry) FROM $table";
+	}
+
+	my @query_args;
+	foreach my $c1(sort keys(%{$params})) {	# sort so that the key is always the same
+		my $arg = $params->{$c1};
+		if(ref($arg)) {
+			$self->_fatal("count $query: argument is not a string");
+			# throw Error::Simple("$query: argument is not a string: " . ref($arg));
+			croak("$query: argument is not a string: ", ref($arg));
+		}
+		if(!defined($arg)) {
+			my @call_details = caller(0);
+			# throw Error::Simple("$query: value for $c1 is not defined in call from " .
+				# $call_details[2] . ' of ' . $call_details[1]);
+			Carp::croak("$query: value for $c1 is not defined in call from ",
+				$call_details[2], ' of ', $call_details[1]);
+		}
+
+		my $keyword;
+		if($done_where) {
+			$keyword = 'AND';
+		} else {
+			$keyword = 'WHERE';
+			$done_where = 1;
+		}
+		if($arg =~ /\@/) {
+			$query .= " $keyword $c1 LIKE ?";
+		} else {
+			$query .= " $keyword $c1 = ?";
+		}
+		push @query_args, $arg;
+	}
+	if(!$self->{no_entry}) {
+		$query .= ' ORDER BY ' . $self->{'id'};
+	}
+
+	if(defined($query_args[0])) {
+		$self->_debug("count $query: ", join(', ', @query_args));
+	} else {
+		$self->_debug("count $query");
+	}
+
+	my $key;
+	my $c;
+	if($c = $self->{cache}) {
+		$key = $query;
+		$key =~ s/COUNT\((.+?)\)/$1/;
+		$key .= ' array';
+		if(defined($query_args[0])) {
+			$key .= ' ' . join(', ', @query_args);
+		}
+		if(my $rc = $c->get($key)) {
+			# Unlikely
+			$self->_debug('cache HIT');
+			return scalar @{$rc};	# We stored a ref to the array
+		}
+		$self->_debug('cache MISS');
+	} else {
+		$self->_debug('cache not used');
+	}
+
+	if(my $sth = $self->{$table}->prepare($query)) {
+		$sth->execute(@query_args) ||
+			# throw Error::Simple("$query: @query_args");
+			croak("$query: @query_args");
+
+		my $count = $sth->fetchrow_arrayref()->[0];
+
+		$sth->finish();
+
+		return $count;
+	}
+	$self->_warn("count failure on $query: @query_args");
+	# throw Error::Simple("$query: @query_args");
+	croak("$query: @query_args");
+}
+
 =head2	fetchrow_hashref
 
 Returns a hash reference for a single row in a table.
